[gd_scene load_steps=13 format=3 uid="uid://b461v3bwhtvbg"]

[ext_resource type="Texture2D" uid="uid://vbyqsx6i6iyx" path="res://16x16Square.png" id="1_7ufby"]
[ext_resource type="Script" path="res://Levels/map.gd" id="1_jdp0t"]
[ext_resource type="PackedScene" uid="uid://dqyqxouojomd6" path="res://dash_throughable_wall.tscn" id="3_dj52i"]
[ext_resource type="PackedScene" uid="uid://d2ir457pc3e2j" path="res://misc/flickering_light.tscn" id="4_4aocd"]
[ext_resource type="PackedScene" uid="uid://uka1ql3olmlw" path="res://Items/dash_pickup.tscn" id="5_2a8bn"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_m0msx"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jvnjv"]
texture = ExtResource("1_7ufby")
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_m0msx")
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_deqbp"]
uv_clipping = true
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/2 = SubResource("TileSetAtlasSource_jvnjv")

[sub_resource type="Gradient" id="Gradient_mence"]
offsets = PackedFloat32Array(0, 0.665584)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_iyjih"]
gradient = SubResource("Gradient_mence")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuda3"]
size = Vector2(20, 2.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8mehq"]
radius = 24.0
height = 112.0

[node name="Map" type="Node2D"]
script = ExtResource("1_jdp0t")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_deqbp")
format = 2
layer_0/tile_data = PackedInt32Array(-196611, 2, 0, -262126, 2, 0, -196612, 2, 0, 1245180, 2, 0, -262127, 2, 0, -262128, 2, 0, -262129, 2, 0, -262130, 2, 0, -262131, 2, 0, -262132, 2, 0, -262133, 2, 0, -262134, 2, 0, -262135, 2, 0, -262136, 2, 0, -262137, 2, 0, -262138, 2, 0, -262139, 2, 0, -262140, 2, 0, -262141, 2, 0, -262142, 2, 0, -262143, 2, 0, -262144, 2, 0, -196609, 2, 0, -196610, 2, 0, -131076, 2, 0, -65540, 2, 0, -4, 2, 0, 65532, 2, 0, 131068, 2, 0, 196604, 2, 0, 262140, 2, 0, 327676, 2, 0, 720892, 2, 0, 786428, 2, 0, 851964, 2, 0, 917500, 2, 0, 983036, 2, 0, 1048572, 2, 0, 1114108, 2, 0, 1179644, 2, 0, 1245181, 2, 0, 1245182, 2, 0, 1245183, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1179665, 2, 0, 1179666, 2, 0, 1179658, 2, 0, -196590, 2, 0, -131054, 2, 0, -65518, 2, 0, 18, 2, 0, 65554, 2, 0, 131090, 2, 0, 196626, 2, 0, 262162, 2, 0, 327698, 2, 0, 393234, 2, 0, 458770, 2, 0, 524306, 2, 0, 589842, 2, 0, 655378, 2, 0, 720914, 2, 0, 786450, 2, 0, 851986, 2, 0, 917522, 2, 0, 983058, 2, 0, 1048594, 2, 0, 1114130, 2, 0, 1179653, 2, 0, 1179657, 2, 0, 327675, 2, 0, 327674, 2, 0, 327673, 2, 0, 327672, 2, 0, 327671, 2, 0, 327670, 2, 0, 327669, 2, 0, 327668, 2, 0, 327667, 2, 0, 720891, 2, 0, 720890, 2, 0, 720889, 2, 0, 720888, 2, 0, 720887, 2, 0, 720886, 2, 0, 720885, 2, 0, 720884, 2, 0, 720883, 2, 0, 262131, 2, 0, 196595, 2, 0, 131059, 2, 0, 65523, 2, 0, -13, 2, 0, -14, 2, 0, -15, 2, 0, -16, 2, 0, -17, 2, 0, -18, 2, 0, -19, 2, 0, -20, 2, 0, -21, 2, 0, -22, 2, 0, -23, 2, 0, 786419, 2, 0, 851955, 2, 0, 917491, 2, 0, 983027, 2, 0, 1048563, 2, 0, 1048562, 2, 0, 1048561, 2, 0, 1048560, 2, 0, 1048559, 2, 0, 1048558, 2, 0, 1048557, 2, 0, 1048556, 2, 0, 1048555, 2, 0, 1048554, 2, 0, 1048553, 2, 0, 655341, 2, 0, 655340, 2, 0, 655339, 2, 0, 655338, 2, 0, 393197, 2, 0, 393196, 2, 0, 393195, 2, 0, 393194, 2, 0, 393193, 2, 0, 655337, 2, 0, 458733, 2, 0, 524269, 2, 0, 589805, 2, 0, 458729, 2, 0, 524265, 2, 0, 589801, 2, 0, -24, 2, 0, -25, 2, 0, -26, 2, 0, -27, 2, 0, -28, 2, 0, -29, 2, 0, 458723, 2, 0, 524259, 2, 0, 589795, 2, 0, 1048547, 2, 0, 1048548, 2, 0, 1048549, 2, 0, 1048550, 2, 0, 1048551, 2, 0, 1048552, 2, 0, 262109, 2, 0, 327645, 2, 0, 393181, 2, 0, -35, 2, 0, 65501, 2, 0, 131037, 2, 0, 196573, 2, 0, 655325, 2, 0, 720861, 2, 0, 786397, 2, 0, 851933, 2, 0, 917469, 2, 0, 983005, 2, 0, 1048541, 2, 0, -65571, 2, 0, -131107, 2, 0, -196643, 2, 0, -262179, 2, 0, -327715, 2, 0, -393251, 2, 0, -393250, 2, 0, -393249, 2, 0, -393248, 2, 0, -393247, 2, 0, -393246, 2, 0, -393245, 2, 0, -393244, 2, 0, -393243, 2, 0, -393242, 2, 0, -393241, 2, 0, -393240, 2, 0, -393239, 2, 0, -393238, 2, 0, -393237, 2, 0, -393236, 2, 0, -393235, 2, 0, -393234, 2, 0, -393233, 2, 0, -393232, 2, 0, -393231, 2, 0, -393230, 2, 0, -393229, 2, 0, 1114077, 2, 0, 1179613, 2, 0, 1245149, 2, 0, 1310685, 2, 0, 1376221, 2, 0, 1441757, 2, 0, 1441758, 2, 0, 1441759, 2, 0, 1441760, 2, 0, 1441761, 2, 0, 1441762, 2, 0, 1441763, 2, 0, 1441764, 2, 0, 1441765, 2, 0, 1441766, 2, 0, 1441767, 2, 0, 1441768, 2, 0, 1441769, 2, 0, 1441770, 2, 0, 1441771, 2, 0, 1441772, 2, 0, 1441773, 2, 0, 1441774, 2, 0, 1441775, 2, 0, 1441776, 2, 0, 1441777, 2, 0, 1441778, 2, 0, 1441779, 2, 0, -393222, 2, 0, -393221, 2, 0, -393220, 2, 0, -327684, 2, 0, -262148, 2, 0, 1310716, 2, 0, 1376252, 2, 0, 1441788, 2, 0, 1441787, 2, 0, 1441786, 2, 0, 1441785, 2, 0, 1048571, 2, 0, 1048570, 2, 0, 1048569, 2, 0, 1048568, 2, 0, -5, 2, 0, -6, 2, 0, -7, 2, 0, -8, 2, 0, 1507321, 2, 0, 1572857, 2, 0, 1638393, 2, 0, 1703929, 2, 0, 1769465, 2, 0, 1835001, 2, 0, 1835000, 2, 0, 1834999, 2, 0, 1834998, 2, 0, 1834997, 2, 0, 1834996, 2, 0, 1834995, 2, 0, 1834994, 2, 0, 1834993, 2, 0, 1834992, 2, 0, 1834991, 2, 0, 1834990, 2, 0, 1834984, 2, 0, 1769448, 2, 0, 1703912, 2, 0, 1638376, 2, 0, 1572840, 2, 0, 1507304, 2, 0, 2490350, 2, 0, 2424814, 2, 0, 2359278, 2, 0, 2293742, 2, 0, 2228206, 2, 0, 2162670, 2, 0, 2097134, 2, 0, 2031598, 2, 0, 1966062, 2, 0, 1900526, 2, 0, -589837, 2, 0, -524301, 2, 0, -458765, 2, 0, -589831, 2, 0, -524295, 2, 0, -458759, 2, 0, -393223, 2, 0, 393182, 2, 0, 393183, 2, 0, 393184, 2, 0, 393185, 2, 0, 393186, 2, 0, 393187, 2, 0, 655326, 2, 0, 655327, 2, 0, 655328, 2, 0, 655329, 2, 0, 655330, 2, 0, 655331, 2, 0, 1900520, 2, 0, 1966056, 2, 0, 2031592, 2, 0, 2097128, 2, 0, 2555880, 2, 0, 2621416, 2, 0, 2686952, 2, 0, 2752488, 2, 0, 2818024, 2, 0, 2883560, 2, 0, 2949096, 2, 0, 3014632, 2, 0, 2555886, 2, 0, 2621422, 2, 0, 2686958, 2, 0, 2752494, 2, 0, 2818030, 2, 0, 2883566, 2, 0, 2949102, 2, 0, 3014638, 2, 0, 3014631, 2, 0, 3014630, 2, 0, 3014629, 2, 0, 3014639, 2, 0, 3014640, 2, 0, 3014641, 2, 0, 3014642, 2, 0, 3014643, 2, 0, 3014628, 2, 0, 3014627, 2, 0, 3014626, 2, 0, 3080162, 2, 0, 3145698, 2, 0, 3211234, 2, 0, 3276770, 2, 0, 3342306, 2, 0, 3407842, 2, 0, 3473378, 2, 0, 3538914, 2, 0, 3604450, 2, 0, 3669986, 2, 0, 3735522, 2, 0, 3735523, 2, 0, 3735524, 2, 0, 3735525, 2, 0, 3735526, 2, 0, 3735527, 2, 0, 3735528, 2, 0, 3735529, 2, 0, 3735530, 2, 0, 3735531, 2, 0, 3735532, 2, 0, 3735533, 2, 0, 3735534, 2, 0, 3735535, 2, 0, 3735536, 2, 0, 3735537, 2, 0, 3735538, 2, 0, 3735539, 2, 0, 3735540, 2, 0, 3670004, 2, 0, 3604468, 2, 0, 3538932, 2, 0, 3473396, 2, 0, 3407860, 2, 0, 3342324, 2, 0, 3276788, 2, 0, 3211252, 2, 0, 3145716, 2, 0, 3080180, 2, 0, 3014644, 2, 0, -655373, 2, 0, -720909, 2, 0, -786445, 2, 0, -851981, 2, 0, -917517, 2, 0, -983053, 2, 0, -1048589, 2, 0, -1114125, 2, 0, -655367, 2, 0, -720903, 2, 0, -786439, 2, 0, -851975, 2, 0, -917511, 2, 0, -983047, 2, 0, -1048583, 2, 0, -1114119, 2, 0, -1114126, 2, 0, -1114127, 2, 0, -1114128, 2, 0, -1114129, 2, 0, -1114130, 2, 0, -1114131, 2, 0, -1114132, 2, 0, -1114133, 2, 0, -1114134, 2, 0, -1114135, 2, 0, -1114136, 2, 0, -1114137, 2, 0, -1114138, 2, 0, -1114139, 2, 0, -1114140, 2, 0, -1114141, 2, 0, -1114142, 2, 0, -1114143, 2, 0, -1507359, 2, 0, -1507358, 2, 0, -1507357, 2, 0, -1507356, 2, 0, -1507355, 2, 0, -1507354, 2, 0, -1507353, 2, 0, -1507352, 2, 0, -1507351, 2, 0, -1507350, 2, 0, -1507349, 2, 0, -1507348, 2, 0, -1507347, 2, 0, -1507346, 2, 0, -1507345, 2, 0, -1507344, 2, 0, -1507343, 2, 0, -1507342, 2, 0, -1507341, 2, 0, -1507340, 2, 0, -1507339, 2, 0, -1507338, 2, 0, -1507337, 2, 0, -1507336, 2, 0, -1507335, 2, 0, -1507334, 2, 0, -1507333, 2, 0, -1507332, 2, 0, -1507331, 2, 0, -1507330, 2, 0, -1114118, 2, 0, -1114117, 2, 0, -1114116, 2, 0, -1114115, 2, 0, -1114114, 2, 0, -1048607, 2, 0, -983071, 2, 0, -917535, 2, 0, -851999, 2, 0, -852000, 2, 0, -852001, 2, 0, -852002, 2, 0, -852003, 2, 0, -852004, 2, 0, -1114149, 2, 0, -1179685, 2, 0, -1245221, 2, 0, -1310757, 2, 0, -1376293, 2, 0, -1441829, 2, 0, -1507365, 2, 0, -1048613, 2, 0, -983077, 2, 0, -917541, 2, 0, -852005, 2, 0, -1703973, 2, 0, -1638437, 2, 0, -1572901, 2, 0, -1703967, 2, 0, -1638431, 2, 0, -1572895, 2, 0, -1179650, 2, 0, -1441794, 2, 0, 2097127, 2, 0, 2097126, 2, 0, 2097125, 2, 0, 2097124, 2, 0, 2097123, 2, 0, 2555879, 2, 0, 2555878, 2, 0, 2555877, 2, 0, 2555876, 2, 0, 2555875, 2, 0, -1900581, 2, 0, -1835045, 2, 0, -1769509, 2, 0, -1900575, 2, 0, -1835039, 2, 0, -1769503, 2, 0, -1900582, 2, 0, -1900583, 2, 0, -1900584, 2, 0, -1900585, 2, 0, -1900586, 2, 0, -1900574, 2, 0, -1900573, 2, 0, -1900572, 2, 0, -1900571, 2, 0, -1900570, 2, 0, -1966106, 2, 0, -2031642, 2, 0, -2097178, 2, 0, -2162714, 2, 0, -2228250, 2, 0, -2293786, 2, 0, -2293787, 2, 0, -2293788, 2, 0, -2293789, 2, 0, -2293790, 2, 0, -2293791, 2, 0, -2293792, 2, 0, -2293793, 2, 0, -2293794, 2, 0, -2293795, 2, 0, -2293796, 2, 0, -2293797, 2, 0, -2293798, 2, 0, -2293799, 2, 0, -2293800, 2, 0, -2293801, 2, 0, -2293802, 2, 0)

[node name="DASHABLE WALLS" type="Node2D" parent="."]
position = Vector2(504, 120)

[node name="DashThroughableWall" parent="DASHABLE WALLS" instance=ExtResource("3_dj52i")]
position = Vector2(-664, 128)

[node name="DashThroughableWall3" parent="DASHABLE WALLS" instance=ExtResource("3_dj52i")]
position = Vector2(-880, 440)
rotation = 1.5708

[node name="DashThroughableWall2" parent="DASHABLE WALLS" instance=ExtResource("3_dj52i")]
position = Vector2(-960, -80)
rotation = 1.5708

[node name="DashThroughableWall4" parent="DASHABLE WALLS" instance=ExtResource("3_dj52i")]
position = Vector2(-528, -448)
rotation = 1.5708

[node name="DepositZone" type="Node2D" parent="."]
position = Vector2(504, 120)

[node name="PointLight2D" type="PointLight2D" parent="DepositZone"]
position = Vector2(0, 8)
energy = 2.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_iyjih")
texture_scale = 2.0

[node name="Area2D" type="Area2D" parent="DepositZone"]
position = Vector2(0, 16)

[node name="DistanceChecker" type="CollisionShape2D" parent="DepositZone/Area2D"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_tuda3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DepositZone/Area2D"]
position = Vector2(0, 11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8mehq")

[node name="LIGHTS" type="Node2D" parent="."]

[node name="flickering_light" parent="LIGHTS" instance=ExtResource("4_4aocd")]
position = Vector2(-128, 120)

[node name="flickering_light2" parent="LIGHTS" instance=ExtResource("4_4aocd")]
position = Vector2(-528, 320)

[node name="flickering_light3" parent="LIGHTS" instance=ExtResource("4_4aocd")]
position = Vector2(-328, 712)

[node name="flickering_light4" parent="LIGHTS" instance=ExtResource("4_4aocd")]
position = Vector2(-536, -328)

[node name="DashPickup" parent="." instance=ExtResource("5_2a8bn")]
position = Vector2(-328, 808)

[connection signal="body_entered" from="DepositZone/Area2D" to="." method="_on_area_2d_body_entered"]
